k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: token-inventory
  namespace: token-inventory
  labels:
    app: token-inventory
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: token-inventory
